Added some more tests and completed first implementation